--- a/Avalonia.Tiels/Resources/Resources.resx
+++ b/Avalonia.Tiels/Resources/Resources.resx
@@ -105,4 +105,7 @@
     <data name="LanguageSelection" xml:space="preserve">
         <value>Application language</value>
     </data>
+    <data name="CreateButton" xml:space="preserve">
+        <value>Create</value>
+    </data>
 </root>
