Add ThumbnailsSettings page. Fix PathBox being visible in every new tile tab. Add image icon. Add UTF-8 encoding in python build.

--- a/Avalonia.Tiels/Resources/Resources.pl.resx
+++ b/Avalonia.Tiels/Resources/Resources.pl.resx
@@ -150,4 +150,7 @@
     <data name="Size" xml:space="preserve">
         <value>Rozmiar</value>
     </data>
+    <data name="SettingsThumbnail" xml:space="preserve">
+        <value>Miniaturki</value>
+    </data>
 </root>
