Add function to move Tile.

--- a/Avalonia.Tiels/Resources/Resources.pl.resx
+++ b/Avalonia.Tiels/Resources/Resources.pl.resx
@@ -165,4 +165,7 @@
     <data name="InvalidInput" xml:space="preserve">
         <value>Nieprawidłowe dane wejściowe!</value>
     </data>
+    <data name="MoveWindow" xml:space="preserve">
+        <value>Przytrzymaj tutaj żeby przesunąć kafelek.</value>
+    </data>
 </root>
