--- a/Avalonia.Tiels/Resources/Resources.pl.resx
+++ b/Avalonia.Tiels/Resources/Resources.pl.resx
@@ -168,4 +168,7 @@
     <data name="MoveWindow" xml:space="preserve">
         <value>Przytrzymaj tutaj żeby przesunąć kafelek.</value>
     </data>
+    <data name="HandleSize" xml:space="preserve">
+        <value>Wysokość uchwytu kafelka</value>
+    </data>
 </root>
