--- a/Avalonia.Tiels/Resources/Resources.resx
+++ b/Avalonia.Tiels/Resources/Resources.resx
@@ -118,7 +118,7 @@
         <value>Theme</value>
     </data>
     <data name="ThemeModeTooltip" xml:space="preserve">
-        <value>Theme of application/icons. If you have tile with dark background then dark and vice versa.</value>
+        <value>Theme of application/icons. Dark ⇒ White text and vice versa</value>
     </data>
     <data name="UseGlobalTheme" xml:space="preserve">
         <value>Use global theme</value>
