--- a/Avalonia.Tiels/Resources/Resources.pl.resx
+++ b/Avalonia.Tiels/Resources/Resources.pl.resx
@@ -195,4 +195,25 @@
     <data name="SettingsAbout" xml:space="preserve">
         <value>O Programie...</value>
     </data>
+    <data name="ContextMenuChooseAnotherApp" xml:space="preserve">
+        <value>Wybierz inną aplikacje</value>
+    </data>
+    <data name="ContextMenuDelete" xml:space="preserve">
+        <value>Usuń</value>
+    </data>
+    <data name="ContextMenuOpen" xml:space="preserve">
+        <value>Otwórz</value>
+    </data>
+    <data name="ContextMenuOpenWith" xml:space="preserve">
+        <value>Otwórz za pomocą...</value>
+    </data>
+    <data name="ContextMenuRename" xml:space="preserve">
+        <value>Zmień nazwę</value>
+    </data>
+    <data name="ContextMenuShowInExplorer" xml:space="preserve">
+        <value>Pokaż w Eksporatorze Plików</value>
+    </data>
+    <data name="ExEnableUpdatesCategory" xml:space="preserve">
+        <value>Włącz Kategorie Aktualizacji</value>
+    </data>
 </root>
